<resources>
    <string name="app_name">Quest</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="team_text">Team</string>
    <string name="title_leaderboard_fragment">Leaderboard</string>
    <string name="title_task_list_fragment">Task List</string>
    <string name="title_camera_fragment"> QR Scanner</string>
    <string name="enter_team_name_text">Enter a Team Name</string>
    <string name="welcome_message">Welcome to Quest</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_help">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="task_list_help_text">Use the Task List tab to view scavenger hunt locations that your team needs to find. If you would like to expand an image, tap on it. You can then swipe between expanded images or use your phone\'s back button to return to the task list. If you have already found an image it will be indicated on the page.</string>
    <string name="qr_reader_help_text">Once at a location there should be a QR code that you can scan to verify your team has found it. Use the QR Scanner to launch your phone\'s camera and scan the code.</string>
    <string name="leaderboard_help_text">Use the leaderboard tab to track your team\'s points as you find new locations. You can also see how many points you have relative to other teams.</string>
    <string name="leaderboard_text">Leaderboard:</string>
    <string name="task_list_text">Task List:</string>
    <string name="qr_scanner_text">QR Scanner:</string>
</resources>
