<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HelpActivity">


    <TextView
        android:id="@+id/help_textView_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="Welcome and thanks for using Quest!"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="58dp"
        tools:layout_editor_absoluteY="52dp" />


    <TextView
        android:id="@+id/help_textView_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="25dp"
        android:textColor="@color/black"
        android:textSize="@dimen/font_size"
        android:text="@string/leaderboard_text"
        android:textStyle="bold"
        android:layout_below="@+id/help_textView_1"
        tools:layout_editor_absoluteX="58dp"
        tools:layout_editor_absoluteY="52dp" />


    <TextView
        android:id="@+id/help_textView_2.5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="0dp"
        android:textColor="@color/black"
        android:textSize="@dimen/font_size"
        android:text="@string/leaderboard_help_text"
        android:layout_below="@+id/help_textView_2"
        tools:layout_editor_absoluteX="58dp"
        tools:layout_editor_absoluteY="52dp" />


    <TextView
        android:id="@+id/help_textView_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="25dp"
        android:textColor="@color/black"
        android:textSize="@dimen/font_size"
        android:text="@string/task_list_text"
        android:textStyle="bold"
        android:layout_below="@+id/help_textView_2.5"
        tools:layout_editor_absoluteX="58dp"
        tools:layout_editor_absoluteY="52dp" />


    <TextView
        android:id="@+id/help_textView_3.5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="0dp"
        android:textColor="@color/black"
        android:textSize="@dimen/font_size"
        android:text="@string/task_list_help_text"
        android:layout_below="@+id/help_textView_3"
        tools:layout_editor_absoluteX="58dp"
        tools:layout_editor_absoluteY="52dp" />


    <TextView
        android:id="@+id/help_textView_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="25dp"
        android:textColor="@color/black"
        android:layout_below="@+id/help_textView_3.5"
        android:textSize="@dimen/font_size"
        android:text="@string/qr_scanner_text"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="58dp"
        tools:layout_editor_absoluteY="52dp" />


    <TextView
        android:id="@+id/help_textView_4.5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="0dp"
        android:textColor="@color/black"
        android:textSize="@dimen/font_size"
        android:text="@string/qr_reader_help_text"
        android:layout_below="@+id/help_textView_4"
        tools:layout_editor_absoluteX="58dp"
        tools:layout_editor_absoluteY="52dp" />


</RelativeLayout>